# dataverse-cli

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  build.rs
src/: main.rs
src/api/: client.rs  mod.rs  types.rs
src/cmd/: auth.rs  commands.rs  gravity.rs  mod.rs  search.rs
src/config/: mod.rs
src/display/: banner.rs  mod.rs
