[package]
name = "dataverse-cli"
version = "0.1.4"
edition = "2021"
description = "CLI for Macrocosmos Data Universe (Bittensor SN13) - query social data from X/Twitter and Reddit"
license = "MIT"
repository = "https://github.com/macrocosm-os/dataverse-cli"
keywords = ["bittensor", "macrocosmos", "social-data", "cli", "sn13"]
categories = ["command-line-utilities"]
include = ["src/**/*", "proto/**/*", "build.rs", "Cargo.toml", "LICENSE", "README.md", "AGENTS.md"]

[[bin]]
name = "dv"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
anyhow = "1"
colored = "3"
tabled = { version = "0.17", features = ["ansi"] }
dirs = "6"
toml = "0.8"
csv = "1"
dialoguer = "0.11"
tonic = { version = "0.12", features = ["tls", "tls-native-roots", "transport"] }
prost = "0.13"
prost-types = "0.13"

[build-dependencies]
tonic-build = "0.12"

[profile.release]
opt-level = 3
lto = true
strip = true
